fix(menu): menu will be covered by CATEFORIES

--- a/assets/scss/partials/menu.scss
+++ b/assets/scss/partials/menu.scss
@@ -133,6 +133,7 @@
     overflow-y: auto;
     flex-grow: 1;
     font-size: 1.4rem;
+    z-index: 3;
     
     border-radius: var(--card-border-radius);
 
